[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Images/hit.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Attack.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.7319, 38.6533 )

[node name="Attack" type="Node2D"]
script = ExtResource( 2 )

[node name="Pivot" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Pivot"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 77, 0 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot"]
anims/hit = SubResource( 1 )

[node name="AttackArea" type="Area2D" parent="Pivot"]
position = Vector2( 77, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AttackArea"]
position = Vector2( -5, 0 )
shape = SubResource( 2 )
[connection signal="animation_finished" from="Pivot/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Pivot/AttackArea" to="." method="_on_Area2D_body_entered"]
